Upgrade to Java 21